--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <!-- <app-navigation> </app-navigation>
 <app-header></app-header> -->
 <app-full-screen-search></app-full-screen-search>
-<router-outlet></router-outlet>
+<router-outlet (activate)="OnActive()"></router-outlet>
 <app-footer></app-footer>
 <!-- <app-about></app-about>
   <app-newsletter></app-newsletter>
