--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,5 @@
 <!-- Footer Start -->
-<div
-  class="container-xxl bg-primary testimonial py-5 wow"
-  data-wow-delay="0.1s"
-  style="
-    margin: 62px;
-    visibility: visible;
-    animation-delay: 0.1s;
-    animation-name: fadeInUp;
-  "
->
+
   <div
     class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn"
     data-wow-delay="0.1s"
@@ -29,16 +20,11 @@
             <a class="btn btn-outline-light btn-social" href=""
               ><i class="fab fa-twitter"></i
             ></a>
-            <a class="btn btn-outline-light btn-social" href=""
+            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/techlogicservices/"
               ><i class="fab fa-facebook-f"></i
             ></a>
-            <a class="btn btn-outline-light btn-social" href=""
-              ><i class="fab fa-youtube"></i
-            ></a>
-            <a class="btn btn-outline-light btn-social" href=""
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a class="btn btn-outline-light btn-social" href=""
+            
+            <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/company/18877146/"
               ><i class="fab fa-linkedin-in"></i
             ></a>
           </div>
@@ -141,6 +127,6 @@
       </div>
     </div>
   </div>
-</div>
+
 
 <!-- Footer End -->
