--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
     <a href="" class="navbar-brand p-0">
       <h1 class="m-0">
-        <i class="fa fa-search me-2"></i>Techlogic IT Services<span
+        <img src="assets/images/logo2.png" > <span
           class="fs-5"
         ></span>
       </h1>
@@ -19,9 +19,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <div class="navbar-nav ms-auto py-0">
-        <a href="index.html" class="nav-item nav-link">Home</a>
-        <a routerLink="/about" class="nav-item nav-link">About</a>
         <a routerLink="/service" class="nav-item nav-link">Service</a>
+        <a href="/header" class="nav-item nav-link">Home</a>
+        <a routerLink="/about" class="nav-item nav-link">About</a>        
         <a routerLink="/project" class="nav-item nav-link">Project</a>
         <div class="nav-item dropdown">
           <a
@@ -32,8 +32,8 @@
           >
           <div class="dropdown-menu m-0">
             <a routerLink="/team" class="dropdown-item active">Our Team</a>
-            <a routerLink="/testimonial" class="dropdown-item">Testimonial</a>
-            <a class="dropdown-item">404 Page</a>
+            <a routerLink="/testimonial" class="dropdown-item">Clients</a>
+            <!-- <a class="dropdown-item">404 Page</a> -->
           </div>
         </div>
         <a routerLink="/contact" class="nav-item nav-link">Contact</a>
@@ -97,10 +97,8 @@
               <a class="btn btn-square text-primary bg-white my-1" href=""
                 ><i class="fab fa-twitter"></i
               ></a>
-              <a class="btn btn-square text-primary bg-white my-1" href=""
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a class="btn btn-square text-primary bg-white my-1" href=""
+              
+              <a class="btn btn-square text-primary bg-white my-1" href="https://www.linkedin.com/in/ataul-kashif-54b930164/"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
             </div>
@@ -129,21 +127,19 @@
               <a class="btn btn-square text-primary bg-white my-1" href=""
                 ><i class="fab fa-twitter"></i
               ></a>
-              <a class="btn btn-square text-primary bg-white my-1" href=""
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a class="btn btn-square text-primary bg-white my-1" href=""
+              
+              <a class="btn btn-square text-primary bg-white my-1" href="https://www.linkedin.com/in/imbasit/"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
             </div>
             <img
               class="img-fluid rounded w-100"
-              src="assets\images\team-2.jpg"
+              src="assets\images\muda.jpg"
               alt=""
             />
           </div>
           <div class="px-4 py-3">
-            <h5 class="fw-bold m-0">Mudaseer Basit</h5>
+            <h5 class="fw-bold m-0">Muddaseer Basit</h5>
             <small>Development Head</small>
           </div>
         </div>
@@ -162,16 +158,14 @@
               <a class="btn btn-square text-primary bg-white my-1" href=""
                 ><i class="fab fa-twitter"></i
               ></a>
-              <a class="btn btn-square text-primary bg-white my-1" href=""
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a class="btn btn-square text-primary bg-white my-1" href=""
+              
+              <a class="btn btn-square text-primary bg-white my-1" href="https://www.linkedin.com/in/mubashar-ahmad-998a0550/"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
             </div>
             <img
               class="img-fluid rounded w-100"
-              src="assets\images\team-2.jpg"
+              src="assets\images\muba.jpg"
               alt=""
             />
           </div>
@@ -194,22 +188,20 @@
               <a class="btn btn-square text-primary bg-white my-1" href=""
                 ><i class="fab fa-twitter"></i
               ></a>
-              <a class="btn btn-square text-primary bg-white my-1" href=""
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a class="btn btn-square text-primary bg-white my-1" href=""
+             
+              <a class="btn btn-square text-primary bg-white my-1" href="https://www.linkedin.com/in/testuk/"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
             </div>
             <img
               class="img-fluid rounded w-100"
-              src="assets\images\team-2.jpg"
+              src="assets\images\usa.jpg"
               alt=""
             />
           </div>
           <div class="px-4 py-3">
-            <h5 class="fw-bold m-0">Usama</h5>
-            <small>Web devalopment</small>
+            <h5 class="fw-bold m-0">Muhammad Usama</h5>
+            <small>Senior  Quality Assurance Analyst</small>
           </div>
         </div>
       </div>
@@ -226,16 +218,14 @@
               <a class="btn btn-square text-primary bg-white my-1" href=""
                 ><i class="fab fa-twitter"></i
               ></a>
-              <a class="btn btn-square text-primary bg-white my-1" href=""
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a class="btn btn-square text-primary bg-white my-1" href=""
+              
+              <a class="btn btn-square text-primary bg-white my-1" href="https://www.linkedin.com/in/hitarth-tilavat/"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
             </div>
             <img
               class="img-fluid rounded w-100"
-              src="assets\images\team-2.jpg"
+              src="assets\images\team-1.jpg"
               alt=""
             />
           </div>
@@ -259,16 +249,14 @@
               <a class="btn btn-square text-primary bg-white my-1" href=""
                 ><i class="fab fa-twitter"></i
               ></a>
-              <a class="btn btn-square text-primary bg-white my-1" href=""
-                ><i class="fab fa-instagram"></i
-              ></a>
+           
               <a class="btn btn-square text-primary bg-white my-1" href=""
                 ><i class="fab fa-linkedin-in"></i
               ></a>
             </div>
             <img
               class="img-fluid rounded w-100"
-              src="assets\images\team-2.jpg"
+              src="assets\images\team-1.jpg"
               alt=""
             />
           </div>
@@ -292,9 +280,7 @@
               <a class="btn btn-square text-primary bg-white my-1" href=""
                 ><i class="fab fa-twitter"></i
               ></a>
-              <a class="btn btn-square text-primary bg-white my-1" href=""
-                ><i class="fab fa-instagram"></i
-              ></a>
+             
               <a class="btn btn-square text-primary bg-white my-1" href=""
                 ><i class="fab fa-linkedin-in"></i
               ></a>
