--- a/src/app/telecom/telecom.component.html
+++ b/src/app/telecom/telecom.component.html
@@ -4,12 +4,11 @@
     <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
       <a href="" class="navbar-brand p-0">
         <h1 class="m-0">
-          <img src="assets/images/logo2.png" > 
-          <span
+          <img src="assets/images/logo2.png" > <span
             class="fs-5"
           ></span>
         </h1>
-        
+        <!-- <img src="assets/Images/logo.png" alt="Logo"> -->
       </a>
       <button
         class="navbar-toggler"
@@ -25,9 +24,9 @@
                 <a href="" class="nav-item nav-link">About</a>
                 <a href="" class="nav-item nav-link">Service</a>
                 <a href="" class="nav-item nav-link">Project</a> -->
-          <a routerLink="/service" class="nav-item nav-link">Service</a>
           <a routerLink="/header" class="nav-item nav-link">Home</a>
-          <a routerLink="/about" class="nav-item nav-link active">About</a>   
+          <a routerLink="/about" class="nav-item nav-link ">About</a>
+          <a routerLink="/service" class="nav-item nav-link">Service</a>
           <a routerLink="/project" class="nav-item nav-link">Project</a>
           <div class="nav-item dropdown">
             <a
@@ -41,7 +40,7 @@
                       <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                       <a href="404.html" class="dropdown-item">404 Page</a> -->
               <a routerLink="/team" class="dropdown-item">Our Team</a>
-              <a routerLink="/testimonial" class="dropdown-item">Clients</a>
+              <a routerLink="/testimonial" class="dropdown-item">Testimonial</a>
               <!-- <a href="" class="dropdown-item">404 Page</a> -->
             </div>
           </div>
@@ -62,21 +61,21 @@
       <div class="container my-5 py-5 px-lg-5">
         <div class="row g-5 py-5">
           <div class="col-12 text-center">
-            <h1 class="text-white animated zoomIn">Techlogic IT Services</h1>
+            <h1 class="text-white animated zoomIn">Telecommunication</h1>
             <hr class="bg-white mx-auto mt-0" style="width: 90px" />
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb justify-content-center">
                 <li class="breadcrumb-item">
-                  <a class="text-white" href="#">United Kingdom</a>
+                  <a class="text-white" href="#">Home</a>
                 </li>
                 <li class="breadcrumb-item">
-                  <a class="text-white" href="#">Dubai</a>
+                  <a class="text-white" href="#">Pages</a>
                 </li>
                 <li
                   class="breadcrumb-item text-white active"
                   aria-current="page"
                 >
-                  Baharin
+                  About
                 </li>
               </ol>
             </nav>
@@ -91,58 +90,80 @@
 <div class="container-xxl py-5">
   <div class="container px-lg-5">
     <div class="row g-5">
+      <p class="mb-4">
+        A cost-effective and feature-rich alternative to traditional phone systems.
+       </p>
       <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
         <div class="section-title position-relative mb-4 pb-2">
-          <h6 class="position-relative text-primary ps-4">About Us</h6>
-          <h2 class="mt-2">Professional Timely IT support</h2>
+          <h2 class="position-relative text-primary ps-4">Voip Telephone system</h2>
+          <h6 class="mt-2"> IT support professionals must ensure that PMS software is working correctly to manage hotel operations, including guest check-in and check-out, room reservations, and billing</h6>
         </div>
-        <p class="mb-4">
-          We offer comprehensive IT support services to help you stay ahead of the competition.
-          
-         
-        </p>
-        <p class="mb-4">
-                    Proactively discover the IT problems
-
-
-          
-        </p>
-        <p class="mb-4">
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Call forwarding</h2>
+          <h6 class="mt-2"> This feature allows users to forward incoming calls to another phone number, such as a mobile phone or another landline, ensuring that important calls are never missed. </h6>
+        </div>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Caller ID</h2>
+          <h6 class="mt-2"> Caller ID allows users to see the phone number and name (if available) of the person calling before answering the call.</h6>
+        </div>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Call waiting</h2>
+          <h6 class="mt-2"> This feature allows users to put the current call on hold and answer a second incoming call, ensuring that they don't miss any important calls.
+          </h6>
+        </div>
        
-
-Our team of experienced professionals will work with you to identify your unique needs and tailor a customized IT solution that fits your business goals.
-
-</p>
-        <p class="mb-4">
-          Partnering with us means you can focus on your core business while we take care of your IT needs. Our services are scalable and flexible, so you can easily adjust them as your business grows and evolves.
-        </p>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Voicemail</h2>
+          <h6 class="mt-2"> Voicemail allows callers to leave a message if the user is unavailable or does not answer the call.</h6>
+        </div>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Conference calling</h2>
+          <h6 class="mt-2"> Conference calling allows multiple users to participate in a call simultaneously, enabling remote collaboration.</h6>
+        </div>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Call recording</h2>
+          <h6 class="mt-2"> Call recording allows users to record calls for later review or training purposes.</h6>
+        </div>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Auto-attendant</h2>
+          <h6 class="mt-2"> An auto-attendant is a recorded message that greets callers and provides them with menu options to direct their call to the appropriate person or department</h6>
+        </div>
+         
+        <br>
+      <br>
+         
         <div class="row g-3">
           <div class="col-sm-6">
-            <h6 class="mb-3">
-              <i class="fa fa-check text-primary me-2"></i>8+ years experience
-            </h6>
-            <h6 class="mb-0">
-              <i class="fa fa-check text-primary me-2"></i>Professional Staff
-            </h6>
+            <h4 class="mb-3">
+              <i class="fa fa-check text-primary me-2"></i>Award Winning
+            </h4>
+            <h4 class="mb-0">
+              <i class="fa fa-check text-primary me-2"></i>Professional  Staff
+            </h4>
           </div>
           <div class="col-sm-6">
-            <h6 class="mb-3">
+            <h4 class="mb-3">
               <i class="fa fa-check text-primary me-2"></i>24/7 Monitoring
-            </h6>
-            <h6 class="mb-0">
+            </h4>
+            <h4 class="mb-0">
               <i class="fa fa-check text-primary me-2"></i>Fair Prices
-            </h6>
+            </h4>
           </div>
         </div>
         <div class="d-flex align-items-center mt-4">
           <a class="btn btn-primary rounded-pill px-4 me-3" href=""
             >Read More</a
           >
-          <a class="btn btn-outline-primary btn-square me-3" href="https://www.facebook.com/techlogicservices/"
+          <a class="btn btn-outline-primary btn-square me-3" href=""
             ><i class="fab fa-facebook-f"></i
           ></a>
-         
-          <a class="btn btn-outline-primary btn-square" href="https://www.linkedin.com/company/18877146/"
+          <a class="btn btn-outline-primary btn-square me-3" href=""
+            ><i class="fab fa-twitter"></i
+          ></a>
+          <a class="btn btn-outline-primary btn-square me-3" href=""
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a class="btn btn-outline-primary btn-square" href=""
             ><i class="fab fa-linkedin-in"></i
           ></a>
         </div>
