--- a/src/app/testimonial/testimonial.component.html
+++ b/src/app/testimonial/testimonial.component.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
     <a href="" class="navbar-brand p-0">
       <h1 class="m-0">
-        <i class="fa fa-search me-2"></i>Techlogic IT Services<span
+        <img src="assets/images/logo2.png" > <span
           class="fs-5"
         ></span>
       </h1>
@@ -19,9 +19,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <div class="navbar-nav ms-auto py-0">
-        <a href="index.html" class="nav-item nav-link">Home</a>
-        <a routerLink="/about" class="nav-item nav-link">About</a>
         <a routerLink="/service" class="nav-item nav-link">Service</a>
+        <a href="/header" class="nav-item nav-link">Home</a>
+        <a routerLink="/about" class="nav-item nav-link">About</a>
+      
         <a routerLink="/project" class="nav-item nav-link">Project</a>
         <div class="nav-item dropdown">
           <a
@@ -35,7 +36,7 @@
             <a routerLink="/testimonial" class="dropdown-item active"
               >Testimonial</a
             >
-            <a class="dropdown-item">404 Page</a>
+            <!-- <a class="dropdown-item">404 Page</a> -->
           </div>
         </div>
         <a routerLink="/contact" class="nav-item nav-link">Contact</a>
@@ -54,19 +55,19 @@
     <div class="container my-5 py-5 px-lg-5">
       <div class="row g-5 py-5">
         <div class="col-12 text-center">
-          <h1 class="text-white animated zoomIn">Testimonial</h1>
+          <h1 class="text-white animated zoomIn">Our Clients</h1>
           <hr class="bg-white mx-auto mt-0" style="width: 90px" />
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb justify-content-center">
-              <li class="breadcrumb-item">
+              <!-- <li class="breadcrumb-item">
                 <a class="text-white" href="#">Home</a>
               </li>
               <li class="breadcrumb-item">
                 <a class="text-white" href="#">Pages</a>
               </li>
               <li class="breadcrumb-item text-white active" aria-current="page">
-                Testimonial
-              </li>
+                Our Clients
+              </li> -->
             </ol>
           </nav>
         </div>
@@ -76,8 +77,8 @@
 </div>
 <!-- Navbar & Hero End -->
 <!-- Testimonial Start -->
-<div class="container-xxl bg-primary testimonial py-5 wow fadeInUp">
-  <div class="container py-5 px-lg-5">
+<div class="container-xxl bg-primary testimonial py-5 wow fadeInUp" data-wow-delay="0.1s" style=" margin: 6rem 0px; visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp; " >
+   <div class="container py-5 px-lg-5">
     <div class="owl-carousel testimonial-carousel owl-loaded owl-drag">
       <div class="owl-stage-outer">
         <div
@@ -121,10 +122,10 @@
               class="testimonial-item bg-transparent border rounded text-white p-4"
             >
               <i class="fa fa-quote-left fa-2x mb-3"></i>
-              <p>
+              <!-- <p>
                 Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
                 stet amet eirmod eos labore diam
-              </p>
+              </p> -->
               <div class="d-flex align-items-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded-circle"
@@ -146,10 +147,10 @@
               class="testimonial-item bg-transparent border rounded text-white p-4"
             >
               <i class="fa fa-quote-left fa-2x mb-3"></i>
-              <p>
+              <!-- <p>
                 Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
                 stet amet eirmod eos labore diam
-              </p>
+              </p> -->
               <div class="d-flex align-items-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded-circle"
@@ -168,10 +169,10 @@
               class="testimonial-item bg-transparent border rounded text-white p-4"
             >
               <i class="fa fa-quote-left fa-2x mb-3"></i>
-              <p>
+              <!-- <p>
                 Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
                 stet amet eirmod eos labore diam
-              </p>
+              </p> -->
               <div class="d-flex align-items-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded-circle"
@@ -190,10 +191,10 @@
               class="testimonial-item bg-transparent border rounded text-white p-4"
             >
               <i class="fa fa-quote-left fa-2x mb-3"></i>
-              <p>
+              <!-- <p>
                 Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
                 stet amet eirmod eos labore diam
-              </p>
+              </p> -->
               <div class="d-flex align-items-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded-circle"
@@ -215,19 +216,19 @@
               class="testimonial-item bg-transparent border rounded text-white p-4"
             >
               <i class="fa fa-quote-left fa-2x mb-3"></i>
-              <p>
+              <!-- <p>
                 Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
                 stet amet eirmod eos labore diam
-              </p>
+              </p> -->
               <div class="d-flex align-items-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded-circle"
-                  src="assets\images\testimonial-3.jpg"
+                  src="assets\images\bucks.jpg"
                   style="width: 50px; height: 50px"
                 />
                 <div class="ps-3">
-                  <h6 class="text-white mb-1">Client Name</h6>
-                  <small>Profession</small>
+                  <h6 class="text-white mb-1">Bucks legal</h6>
+                  <small>Solicitor</small>
                 </div>
               </div>
             </div>
@@ -240,19 +241,19 @@
               class="testimonial-item bg-transparent border rounded text-white p-4"
             >
               <i class="fa fa-quote-left fa-2x mb-3"></i>
-              <p>
+              <!-- <p>
                 Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
                 stet amet eirmod eos labore diam
-              </p>
+              </p> -->
               <div class="d-flex align-items-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded-circle"
-                  src="assets\images\testimonial-4.jpg"
+                  src="assets\images\eagle.jpg"
                   style="width: 50px; height: 50px"
                 />
                 <div class="ps-3">
-                  <h6 class="text-white mb-1">Client Name</h6>
-                  <small>Profession</small>
+                  <h6 class="text-white mb-1">Eagle tech</h6>
+                  <small>Software house</small>
                 </div>
               </div>
             </div>
@@ -265,19 +266,19 @@
               class="testimonial-item bg-transparent border rounded text-white p-4"
             >
               <i class="fa fa-quote-left fa-2x mb-3"></i>
-              <p>
+              <!-- <p>
                 Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
                 stet amet eirmod eos labore diam
-              </p>
+              </p> -->
               <div class="d-flex align-items-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded-circle"
-                  src="assets\images\testimonial-1.jpg"
+                  src="assets\images\sre.png"
                   style="width: 50px; height: 50px"
                 />
                 <div class="ps-3">
-                  <h6 class="text-white mb-1">Client Name</h6>
-                  <small>Profession</small>
+                  <h6 class="text-white mb-1">Serenity School</h6>
+                  <small>Education</small>
                 </div>
               </div>
             </div>
@@ -290,10 +291,10 @@
               class="testimonial-item bg-transparent border rounded text-white p-4"
             >
               <i class="fa fa-quote-left fa-2x mb-3"></i>
-              <p>
+              <!-- <p>
                 Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
                 stet amet eirmod eos labore diam
-              </p>
+              </p> -->
               <div class="d-flex align-items-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded-circle"
@@ -301,8 +302,8 @@
                   style="width: 50px; height: 50px"
                 />
                 <div class="ps-3">
-                  <h6 class="text-white mb-1">Client Name</h6>
-                  <small>Profession</small>
+                  <h6 class="text-white mb-1">Longfellow</h6>
+                  <small>Solicitor</small>
                 </div>
               </div>
             </div>
@@ -315,10 +316,10 @@
               class="testimonial-item bg-transparent border rounded text-white p-4"
             >
               <i class="fa fa-quote-left fa-2x mb-3"></i>
-              <p>
+              <!-- <p>
                 Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
                 stet amet eirmod eos labore diam
-              </p>
+              </p> -->
               <div class="d-flex align-items-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded-circle"
@@ -326,8 +327,8 @@
                   style="width: 50px; height: 50px"
                 />
                 <div class="ps-3">
-                  <h6 class="text-white mb-1">Client Name</h6>
-                  <small>Profession</small>
+                  <h6 class="text-white mb-1">Proview Accounting</h6>
+                  <small>Accountant</small>
                 </div>
               </div>
             </div>
