--- a/src/app/webdev/webdev.component.html
+++ b/src/app/webdev/webdev.component.html
@@ -4,12 +4,11 @@
     <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
       <a href="" class="navbar-brand p-0">
         <h1 class="m-0">
-          <img src="assets/images/logo2.png" > 
-          <span
+          <img src="assets/images/logo2.png" > <span
             class="fs-5"
           ></span>
         </h1>
-        
+        <!-- <img src="assets/Images/logo.png" alt="Logo"> -->
       </a>
       <button
         class="navbar-toggler"
@@ -25,9 +24,9 @@
                 <a href="" class="nav-item nav-link">About</a>
                 <a href="" class="nav-item nav-link">Service</a>
                 <a href="" class="nav-item nav-link">Project</a> -->
-          <a routerLink="/service" class="nav-item nav-link">Service</a>
           <a routerLink="/header" class="nav-item nav-link">Home</a>
-          <a routerLink="/about" class="nav-item nav-link active">About</a>   
+          <a routerLink="/about" class="nav-item nav-link ">About</a>
+          <a routerLink="/service" class="nav-item nav-link">Service</a>
           <a routerLink="/project" class="nav-item nav-link">Project</a>
           <div class="nav-item dropdown">
             <a
@@ -41,7 +40,7 @@
                       <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                       <a href="404.html" class="dropdown-item">404 Page</a> -->
               <a routerLink="/team" class="dropdown-item">Our Team</a>
-              <a routerLink="/testimonial" class="dropdown-item">Clients</a>
+              <a routerLink="/testimonial" class="dropdown-item">Testimonial</a>
               <!-- <a href="" class="dropdown-item">404 Page</a> -->
             </div>
           </div>
@@ -62,21 +61,21 @@
       <div class="container my-5 py-5 px-lg-5">
         <div class="row g-5 py-5">
           <div class="col-12 text-center">
-            <h1 class="text-white animated zoomIn">Techlogic IT Services</h1>
+            <h1 class="text-white animated zoomIn">Web Development</h1>
             <hr class="bg-white mx-auto mt-0" style="width: 90px" />
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb justify-content-center">
                 <li class="breadcrumb-item">
-                  <a class="text-white" href="#">United Kingdom</a>
+                  <a class="text-white" href="#">Home</a>
                 </li>
                 <li class="breadcrumb-item">
-                  <a class="text-white" href="#">Dubai</a>
+                  <a class="text-white" href="#">Pages</a>
                 </li>
                 <li
                   class="breadcrumb-item text-white active"
                   aria-current="page"
                 >
-                  Baharin
+                  About
                 </li>
               </ol>
             </nav>
@@ -91,58 +90,80 @@
 <div class="container-xxl py-5">
   <div class="container px-lg-5">
     <div class="row g-5">
+      <p class="mb-4">
+        Our web development services can provide businesses with a range of options to create an online presence, whether it be a simple brochure website or a complex e-commerce platform.
+       </p>
       <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
         <div class="section-title position-relative mb-4 pb-2">
-          <h6 class="position-relative text-primary ps-4">About Us</h6>
-          <h2 class="mt-2">Professional Timely IT support</h2>
-        </div>
-        <p class="mb-4">
-          We offer comprehensive IT support services to help you stay ahead of the competition.
-          
-         
-        </p>
-        <p class="mb-4">
-                    Proactively discover the IT problems
+          <h2 class="position-relative text-primary ps-4">Responsive web design</h2>
+          <h6 class="mt-2"> Custom websites development   that are optimized for viewing on a range of devices, from desktops to smartphones.
 
-
-          
-        </p>
-        <p class="mb-4">
        
 
-Our team of experienced professionals will work with you to identify your unique needs and tailor a customized IT solution that fits your business goals.
+  </h6>
+        </div>
 
-</p>
-        <p class="mb-4">
-          Partnering with us means you can focus on your core business while we take care of your IT needs. Our services are scalable and flexible, so you can easily adjust them as your business grows and evolves.
-        </p>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4"> E-commerce development</h2>
+          <h6 class="mt-2"> This involves creating an online store and integrating payment gateways, shopping carts, and other e-commerce functionality. </h6>
+        </div>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Content management system (CMS) development</h2>
+          <h6 class="mt-2"> This involves building custom CMS platforms or integrating existing CMS solutions like WordPress, Drupal, and Joomla to manage website content.
+          </h6>
+        </div>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Web maintenance and support</h2>
+          <h6 class="mt-2"> This involves providing ongoing support and maintenance for websites and web applications, including updates, security patches, and bug fixes.
+          </h6>
+        </div>
+       
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4"> Web application development</h2>
+          <h6 class="mt-2"> This involves building web-based software applications, such as project management tools, customer relationship management (CRM) systems, and other business applications.
+          </h6>
+        </div>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Data analytics and business intelligence software</h2>
+          <h6 class="mt-2"> Data analytics and business intelligence software are used to analyze and interpret business data, allowing businesses to make data-driven decisions.</h6>
+        </div>
+        
+         
+        <br>
+      <br>
+         
         <div class="row g-3">
           <div class="col-sm-6">
-            <h6 class="mb-3">
-              <i class="fa fa-check text-primary me-2"></i>8+ years experience
-            </h6>
-            <h6 class="mb-0">
-              <i class="fa fa-check text-primary me-2"></i>Professional Staff
-            </h6>
+            <h4 class="mb-3">
+              <i class="fa fa-check text-primary me-2"></i>Award Winning
+            </h4>
+            <h4 class="mb-0">
+              <i class="fa fa-check text-primary me-2"></i>Professional  Staff
+            </h4>
           </div>
           <div class="col-sm-6">
-            <h6 class="mb-3">
+            <h4 class="mb-3">
               <i class="fa fa-check text-primary me-2"></i>24/7 Monitoring
-            </h6>
-            <h6 class="mb-0">
+            </h4>
+            <h4 class="mb-0">
               <i class="fa fa-check text-primary me-2"></i>Fair Prices
-            </h6>
+            </h4>
           </div>
         </div>
         <div class="d-flex align-items-center mt-4">
           <a class="btn btn-primary rounded-pill px-4 me-3" href=""
             >Read More</a
           >
-          <a class="btn btn-outline-primary btn-square me-3" href="https://www.facebook.com/techlogicservices/"
+          <a class="btn btn-outline-primary btn-square me-3" href=""
             ><i class="fab fa-facebook-f"></i
           ></a>
-         
-          <a class="btn btn-outline-primary btn-square" href="https://www.linkedin.com/company/18877146/"
+          <a class="btn btn-outline-primary btn-square me-3" href=""
+            ><i class="fab fa-twitter"></i
+          ></a>
+          <a class="btn btn-outline-primary btn-square me-3" href=""
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a class="btn btn-outline-primary btn-square" href=""
             ><i class="fab fa-linkedin-in"></i
           ></a>
         </div>
