--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,7 +4,7 @@
     <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
       <a href="" class="navbar-brand p-0">
         <h1 class="m-0">
-          <i class="fa fa-search me-2"></i>Techlogic IT Services<span
+          <img src="assets/images/logo2.png" > <span
             class="fs-5"
           ></span>
         </h1>
@@ -24,10 +24,9 @@
                 <a href="" class="nav-item nav-link">About</a>
                 <a href="" class="nav-item nav-link">Service</a>
                 <a href="" class="nav-item nav-link">Project</a> -->
-          <a routerLink="/header" class="nav-item nav-link">Home</a>
-          <a routerLink="/about" class="nav-item nav-link">About</a>
-          <a routerLink="/project" class="nav-item nav-link active">Contact</a>
           <a routerLink="/service" class="nav-item nav-link">Service</a>
+          <a routerLink="/header" class="nav-item nav-link">Home</a>
+          <a routerLink="/about" class="nav-item nav-link">About</a>     
           <a routerLink="/project" class="nav-item nav-link">Project</a>
           <div class="nav-item dropdown">
             <a
@@ -41,11 +40,11 @@
                       <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                       <a href="404.html" class="dropdown-item">404 Page</a> -->
               <a routerLink="/team" class="dropdown-item">Our Team</a>
-              <a routerLink="/testimonial" class="dropdown-item">Testimonial</a>
-              <a href="" class="dropdown-item">404 Page</a>
+              <a routerLink="/testimonial" class="dropdown-item">Clients</a>
+              <!-- <a href="" class="dropdown-item">404 Page</a> -->
             </div>
           </div>
-          <a routerLink="/contact" class="nav-item nav-link">Contact</a>
+          <a routerLink="/contact" class="nav-item nav-link active">Contact</a>
           <!-- <a href="contact.html" class="nav-item nav-link">Contact</a> -->
         </div>
         <button
