--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -4,12 +4,11 @@
     <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
       <a href="" class="navbar-brand p-0">
         <h1 class="m-0">
-          <img src="assets/images/logo2.png" > 
-          <span
+          <img src="assets/images/logo2.png" > <span
             class="fs-5"
           ></span>
         </h1>
-        
+        <!-- <img src="assets/Images/logo.png" alt="Logo"> -->
       </a>
       <button
         class="navbar-toggler"
@@ -25,9 +24,10 @@
                 <a href="" class="nav-item nav-link">About</a>
                 <a href="" class="nav-item nav-link">Service</a>
                 <a href="" class="nav-item nav-link">Project</a> -->
-          <a routerLink="/service" class="nav-item nav-link">Service</a>
+                <a routerLink="/service" class="nav-item nav-link active">Service</a>
           <a routerLink="/header" class="nav-item nav-link">Home</a>
-          <a routerLink="/about" class="nav-item nav-link active">About</a>   
+          <a routerLink="/about" class="nav-item nav-link ">About</a>
+          
           <a routerLink="/project" class="nav-item nav-link">Project</a>
           <div class="nav-item dropdown">
             <a
@@ -62,21 +62,21 @@
       <div class="container my-5 py-5 px-lg-5">
         <div class="row g-5 py-5">
           <div class="col-12 text-center">
-            <h1 class="text-white animated zoomIn">Techlogic IT Services</h1>
+            <h1 class="text-white animated zoomIn">Education</h1>
             <hr class="bg-white mx-auto mt-0" style="width: 90px" />
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb justify-content-center">
                 <li class="breadcrumb-item">
-                  <a class="text-white" href="#">United Kingdom</a>
+                  <a class="text-white" href="#">Home</a>
                 </li>
                 <li class="breadcrumb-item">
-                  <a class="text-white" href="#">Dubai</a>
+                  <a class="text-white" href="#">Pages</a>
                 </li>
                 <li
                   class="breadcrumb-item text-white active"
                   aria-current="page"
                 >
-                  Baharin
+                  About
                 </li>
               </ol>
             </nav>
@@ -91,58 +91,71 @@
 <div class="container-xxl py-5">
   <div class="container px-lg-5">
     <div class="row g-5">
+      <p class="mb-4">
+        Top Notch IT troubleshooting and proactive monitoring to enure Minimum downtime and Maximum revenue for your business.
+       </p>
       <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
         <div class="section-title position-relative mb-4 pb-2">
-          <h6 class="position-relative text-primary ps-4">About Us</h6>
-          <h2 class="mt-2">Professional Timely IT support</h2>
+          <h2 class="position-relative text-primary ps-4">Learning management systems </h2>
+          <h6 class="mt-2"> Our support teams ensure that the acadmeic software is functioning correctly to manage course content, student progress, and assessment results.</h6>
         </div>
-        <p class="mb-4">
-          We offer comprehensive IT support services to help you stay ahead of the competition.
-          
-         
-        </p>
-        <p class="mb-4">
-                    Proactively discover the IT problems
-
-
-          
-        </p>
-        <p class="mb-4">
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Network infrastructure</h2>
+          <h6 class="mt-2"> We manage your entire network infrastructure, including routers, switches, and servers, ensuring that they are properly configured and maintained to minimize downtime</h6>
+        </div>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Cybersecurity</h2>
+          <h6 class="mt-2"> We provide cybersecurity services to help prevent cyber attacks and protect sensitive business data, including implementing firewalls, antivirus software, and encryption tools</h6>
+        </div>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Administrative technology</h2>
+          <h6 class="mt-2"> This includes student information systems, finance and accounting software, and HR management systems. IT support must ensure that all these systems are functioning correctly.</h6>
+        </div>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Cloud computing</h2>
+          <h6 class="mt-2"> We help businesses transition to cloud-based platforms, allowing employees to work remotely and access business data and applications from any location.</h6>
+        </div>
+        <div class="section-title position-relative mb-4 pb-2">
+          <h2 class="position-relative text-primary ps-4">Office 365 Support</h2>
+          <h6 class="mt-2"> Setting up Email , distribution group , enabling forwarding  you name it we do it.</h6>
+        </div>
        
-
-Our team of experienced professionals will work with you to identify your unique needs and tailor a customized IT solution that fits your business goals.
-
-</p>
-        <p class="mb-4">
-          Partnering with us means you can focus on your core business while we take care of your IT needs. Our services are scalable and flexible, so you can easily adjust them as your business grows and evolves.
-        </p>
+         
+        <br>
+      <br>
+         
         <div class="row g-3">
           <div class="col-sm-6">
-            <h6 class="mb-3">
-              <i class="fa fa-check text-primary me-2"></i>8+ years experience
-            </h6>
-            <h6 class="mb-0">
-              <i class="fa fa-check text-primary me-2"></i>Professional Staff
-            </h6>
+            <h4 class="mb-3">
+              <i class="fa fa-check text-primary me-2"></i>Award Winning
+            </h4>
+            <h4 class="mb-0">
+              <i class="fa fa-check text-primary me-2"></i>Professional  Staff
+            </h4>
           </div>
           <div class="col-sm-6">
-            <h6 class="mb-3">
+            <h4 class="mb-3">
               <i class="fa fa-check text-primary me-2"></i>24/7 Monitoring
-            </h6>
-            <h6 class="mb-0">
+            </h4>
+            <h4 class="mb-0">
               <i class="fa fa-check text-primary me-2"></i>Fair Prices
-            </h6>
+            </h4>
           </div>
         </div>
         <div class="d-flex align-items-center mt-4">
           <a class="btn btn-primary rounded-pill px-4 me-3" href=""
             >Read More</a
           >
-          <a class="btn btn-outline-primary btn-square me-3" href="https://www.facebook.com/techlogicservices/"
+          <a class="btn btn-outline-primary btn-square me-3" href=""
             ><i class="fab fa-facebook-f"></i
           ></a>
-         
-          <a class="btn btn-outline-primary btn-square" href="https://www.linkedin.com/company/18877146/"
+          <a class="btn btn-outline-primary btn-square me-3" href=""
+            ><i class="fab fa-twitter"></i
+          ></a>
+          <a class="btn btn-outline-primary btn-square me-3" href=""
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a class="btn btn-outline-primary btn-square" href=""
             ><i class="fab fa-linkedin-in"></i
           ></a>
         </div>
