--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
     <a href="" class="navbar-brand p-0">
       <h1 class="m-0">
-        <i class="fa fa-search me-2"></i>Techlogic IT Services<span
+        <img src="assets/images/logo2.png" > <span
           class="fs-5"
         ></span>
       </h1>
@@ -19,9 +19,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <div class="navbar-nav ms-auto py-0">
-        <a href="index.html" class="nav-item nav-link active">Home</a>
-        <a routerLink="/about" class="nav-item nav-link">About</a>
         <a routerLink="/service" class="nav-item nav-link">Service</a>
+        <a href="/header" class="nav-item nav-link active">Home</a>
+        <a routerLink="/about" class="nav-item nav-link">About</a>
+
         <a routerLink="/project" class="nav-item nav-link">Project</a>
         <div class="nav-item dropdown">
           <a
@@ -32,8 +33,8 @@
           >
           <div class="dropdown-menu m-0">
             <a routerLink="/team" class="dropdown-item">Our Team</a>
-            <a routerLink="/testimonial" class="dropdown-item">Testimonial</a>
-            <a class="dropdown-item">404 Page</a>
+            <a routerLink="/testimonial" class="dropdown-item">Clients</a>
+            <!-- <a class="dropdown-item">404 Page</a> -->
           </div>
         </div>
         <a routerLink="/contact" class="nav-item nav-link">Contact</a>
