--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -40,8 +40,8 @@
                     <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                     <a href="404.html" class="dropdown-item">404 Page</a> -->
               <a routerLink="/team" class="dropdown-item">Our Team</a>
-              <a routerLink="/testimonial" class="dropdown-item">Testimonial</a>
-              <a href="" class="dropdown-item">404 Page</a>
+              <a routerLink="/testimonial" class="dropdown-item">Clients</a>
+              <!-- <a href="" class="dropdown-item">404 Page</a> -->
             </div>
           </div>
           <a routerLink="/contact" class="nav-item nav-link">Contact</a>
