--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
     <a href="" class="navbar-brand p-0">
       <h1 class="m-0">
-        <i class="fa fa-search me-2"></i>Techlogic IT Services<span
+        <img src="assets/images/logo2.png" > <span
           class="fs-5"
         ></span>
       </h1>
@@ -19,9 +19,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <div class="navbar-nav ms-auto py-0">
-        <a href="index.html" class="nav-item nav-link">Home</a>
-        <a routerLink="/about" class="nav-item nav-link">About</a>
         <a routerLink="/service" class="nav-item nav-link active">Service</a>
+        <a href="/header" class="nav-item nav-link">Home</a>
+        <a routerLink="/about" class="nav-item nav-link">About</a>
+       
         <a routerLink="/project" class="nav-item nav-link">Project</a>
         <div class="nav-item dropdown">
           <a
@@ -32,8 +33,8 @@
           >
           <div class="dropdown-menu m-0">
             <a routerLink="/team" class="dropdown-item">Our Team</a>
-            <a routerLink="/testimonial" class="dropdown-item">Testimonial</a>
-            <a class="dropdown-item">404 Page</a>
+            <a routerLink="/testimonial" class="dropdown-item">Clients</a>
+            <!-- <a class="dropdown-item">404 Page</a> -->
           </div>
         </div>
         <a routerLink="/contact" class="nav-item nav-link">Contact</a>
@@ -51,22 +52,32 @@
   <div class="container-xxl py-5 bg-primary hero-header mb-5">
     <div class="container my-5 py-5 px-lg-5">
       <div class="row g-5 py-5">
-        <div class="col-12 text-center">
-          <h1 class="text-white animated zoomIn">Service</h1>
-          <hr class="bg-white mx-auto mt-0" style="width: 90px" />
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb justify-content-center">
-              <li class="breadcrumb-item">
-                <a class="text-white" href="#">Home</a>
-              </li>
-              <li class="breadcrumb-item">
-                <a class="text-white" href="#">Pages</a>
-              </li>
-              <li class="breadcrumb-item text-white active" aria-current="page">
-                Service
-              </li>
-            </ol>
-          </nav>
+        <div class="col-lg-6 text-center text-lg-start">
+          <h1 class="text-white mb-4 animated zoomIn">
+            A one stop solution for all your IT needs
+          </h1>
+          <p class="text-white pb-3 animated zoomIn">
+            Our IT support company offers a comprehensive range of services
+            including Office 365 management, cloud computing solutions, IT
+            infrastructure management, server and firewall configuration, and
+            maintenance. We understand the importance of a robust and secure IT
+            infrastructure, and our team of experts is dedicated to providing
+            top-notch support and maintenance to ensure that your business runs
+            smoothly and efficiently
+          </p>
+          <a
+            routerLink="/contact"
+            class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft"
+            >Free Quote</a
+          >
+          <a
+            routerLink="/contact"
+            class="btn btn-outline-light py-sm-3 px-sm-5 rounded-pill animated slideInRight"
+            >Contact Us</a
+          >
+        </div>
+        <div class="col-lg-6 text-center text-lg-start">
+          <img class="img-fluid" src="assets\images\hero.png" alt="" />
         </div>
       </div>
     </div>
@@ -93,11 +104,12 @@
           <div class="service-icon flex-shrink-0">
             <i class="fa fa-home fa-2x"></i>
           </div>
-          <h5 class="mb-3">IT Support</h5>
+          <h5 class="mb-3">IT Support- Business</h5>
           <p>
             Active IT support and resolution of IT isseus as soon as they arise
           </p>
-          <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+          <a class="btn px-3 mt-auto mx-auto" routerLink="/business">Read More</a>
+
         </div>
       </div>
       <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
@@ -107,9 +119,9 @@
           <div class="service-icon flex-shrink-0">
             <i class="fa fa-home fa-2x"></i>
           </div>
-          <h5 class="mb-3">Cloud</h5>
-          <p>Azure , AWS .</p>
-          <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+          <h5 class="mb-3">IT Support- Education</h5>
+          <p>Tailor made education package</p>
+          <a class="btn px-3 mt-auto mx-auto " routerLink="/education">Read More</a>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
@@ -119,12 +131,23 @@
           <div class="service-icon flex-shrink-0">
             <i class="fa fa-home fa-2x"></i>
           </div>
-          <h5 class="mb-3">Security</h5>
+          <h5 class="mb-3">IT Supoort- Hopitality</h5>
           <p>
-            Cutting edge monitoring toolkits to ensure that security is top
-            notch.
+            Hospitality
           </p>
-          <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+          <a class="btn px-3 mt-auto mx-auto" routerLink="/hospitality">Read More</a>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+        <div
+          class="service-item d-flex flex-column justify-content-center text-center rounded"
+        >
+          <div class="service-icon flex-shrink-0">
+            <i class="fa fa-home fa-2x"></i>
+          </div>
+          <h5 class="mb-3">Telecommunication</h5>
+          <p>3CX integration</p>
+          <a class="btn px-3 mt-auto mx-auto" routerLink="/telecom">Read More</a>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
@@ -136,7 +159,7 @@
           </div>
           <h5 class="mb-3">Bespoke Softwares</h5>
           <p>Tailor made software solutions tailoured for your needs.</p>
-          <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+          <a class="btn px-3 mt-auto mx-auto" routerLink="/softdev">Read More</a>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
@@ -150,21 +173,10 @@
           <p>
             We ensure your online presence is as strong as your instore presence
           </p>
-          <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+          <a class="btn px-3 mt-auto mx-auto" routerLink="/webdev">Read More</a>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
-        <div
-          class="service-item d-flex flex-column justify-content-center text-center rounded"
-        >
-          <div class="service-icon flex-shrink-0">
-            <i class="fa fa-home fa-2x"></i>
-          </div>
-          <h5 class="mb-3">App Development</h5>
-          <p>We create apps that serve your pourpose.</p>
-          <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
-        </div>
-      </div>
+      
     </div>
   </div>
 </div>
